# oye

./: .pre-commit-config.yaml  Makefile  architectural-design.md  docker-compose.yml
api/: README.md  pyproject.toml
api/requirements/: dev.in  dev.txt  prod.in  prod.txt
api/src/: config.py  exhaustive_match.py  logs.py  main.py  model.py  safety.py  telegram.py  use_cases.py
api/src/adapters/: api.py  cli.py  cli_calculate_next_occurrences.py  cli_dispatch_reminders.py  cli_poc.py  telegram_bot.py
api/src/domain/: inference.py  reminders.py  use_cases.py
api/tests/: conftest.py  factories.py  test_api.py  test_config.py  test_main.py  test_use_cases.py
api/tests/domain/: test_inference.py  test_reminders.py
cli/: Cargo.toml  setup.cfg
cli/docker/dev/: start
cli/requirements/: dev.txt  prod.in  prod.txt
cli/src/: cli.py  config.py  config.rs  devex.py  model.py  oye.py  oye.rs  use_cases.py  use_cases.rs
cli/tests/: conftest.py  factories.py  test_cli.py
cli_v2/: Cargo.toml
cli_v2/src/: config.rs  main.rs  oye.rs
docs/: 2024-01-07-141606-oye-architecture-overview.drawio  architecture.md
event_handler/: Dockerfile
event_handler/docker/dev/: start
event_handler/docker/prod/: start
event_handler/requirements/: dev.in  dev.txt  prod.in  prod.txt
event_handler/src/: config.py  ids.py  main.py  model.py
event_handler/src/adapters/: event_handler.py  nats.py
event_handler/src/domain/: event_handling.py  reminders.py  ticker.py
event_handler/tests/: factories.py
event_handler/tests/domain/: test_event_handling.py  test_reminders.py
(+8 files in other folders)
