[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_jsonrc = "0.1.0"
serde_yaml = "0.9.22"

[[bin]]
name = "oye"
path = "src/main.rs"
test = false
bench = false
